@@ -5367,6 +5367,193 @@ static const char* const t_colorconfig_icon_data[] = {
     ".##....###......"
 };
 
+static const char* const t_qtlogo_icon_data[] = {
+/* columns rows colors chars-per-pixel */
+"64 64 116 2",
+"   c #0C481E",
+".  c #114D1F",
+"X  c #114E20",
+"o  c #155321",
+"O  c #185623",
+"+  c #1D5A24",
+"@  c #235E2A",
+"#  c #256425",
+"$  c #296A26",
+"%  c #26612C",
+"&  c #2D6B2D",
+"*  c #347629",
+"=  c #367929",
+"-  c #3A7D2A",
+";  c #2C6631",
+":  c #316A34",
+">  c #377533",
+",  c #367039",
+"<  c #3C753D",
+"1  c #487D47",
+"2  c #497F49",
+"3  c #3E822C",
+"4  c #42862C",
+"5  c #468B2D",
+"6  c #488E2E",
+"7  c #4C922F",
+"8  c #45823C",
+"9  c #4F8C3F",
+"0  c #4E9430",
+"q  c #509730",
+"w  c #559D32",
+"e  c #589F33",
+"r  c #5BA333",
+"t  c #5FA834",
+"y  c #63AC35",
+"u  c #66B036",
+"i  c #67B138",
+"p  c #6BB33D",
+"a  c #51854F",
+"s  c #538651",
+"d  c #558853",
+"f  c #5E8E5B",
+"g  c #5A9052",
+"h  c #62915F",
+"j  c #69AD42",
+"k  c #6EB440",
+"l  c #73B747",
+"z  c #76B84B",
+"x  c #7CBB52",
+"c  c #669562",
+"v  c #699665",
+"b  c #6E9B6B",
+"n  c #729E6F",
+"m  c #749F70",
+"M  c #77A172",
+"N  c #7BA476",
+"B  c #81BE5A",
+"V  c #82AA7F",
+"C  c #8EBB7C",
+"Z  c #8AC265",
+"A  c #8CC368",
+"S  c #91C66F",
+"D  c #96C975",
+"F  c #9BCB7B",
+"G  c #8AAF85",
+"H  c #91B58B",
+"J  c #9FBE9B",
+"K  c #A0BF9B",
+"L  c #9ECD80",
+"P  c #A3CF86",
+"I  c #A4D087",
+"U  c #A9D28D",
+"Y  c #ACD493",
+"T  c #B1D69B",
+"R  c #B4D89C",
+"E  c #A6C2A2",
+"W  c #ABC6A6",
+"Q  c #AFCAAC",
+"!  c #B3CCAF",
+"~  c #B7D6A6",
+"^  c #B7DAA0",
+"/  c #B8DAA1",
+"(  c #BDDDAA",
+")  c #B6CEB3",
+"_  c #B9D1B6",
+"`  c #BED3BA",
+"'  c #C1DFAE",
+"]  c #C0D7B6",
+"[  c #C1DDB2",
+"{  c #C5E1B2",
+"}  c #CCE5BD",
+"|  c #C3D7C0",
+" . c #C6D8C2",
+".. c #CADCC6",
+"X. c #CFE6C0",
+"o. c #D1E7C2",
+"O. c #D3E9C6",
+"+. c #D1E2CC",
+"@. c #D6EACA",
+"#. c #D9EACE",
+"$. c #D5E3D2",
+"%. c #D9E6D7",
+"&. c #DDEDD4",
+"*. c #DDE9DB",
+"=. c #E5F2DC",
+"-. c #E3ECE1",
+";. c #E9EFE7",
+":. c #E6F1E0",
+">. c #EAF4E3",
+",. c #EDF4EB",
+"<. c #F2F8EE",
+"1. c #F1F6F0",
+"2. c #F6F9F4",
+"3. c #F9FCF7",
+"4. c #FFFFFF",
+"5. c None",
+/* pixels */
+"5.5.5.5.5.5.5.5.5.5.5.      - q w r r q 6 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.5.5.5.      $ r u u u u u u u u u u r q 6 5 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.5.        $ u u u u u u u u u u u u u u u u u u t w 7 5 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.5.      O y u u u u u u u u u u u u u u u u u u u u u u u u t w 7 5 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.        7 u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y w 7 5 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.        y u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y w 7 5 5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.      O u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y e 0 5 5.5.5.5.5.5.",
+"5.5.5.5.5.        $ u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u y r j x l u u u u u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u y 5 $ 2 J 2.4.4.4.1.O.Y k u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u r + @ ` 4.4.4.4.4.4.4.4.4.2.Y u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u r o @ ,.4.4.4.4.4.4.4.4.4.4.4.4.X.p u u u u u y X o 2.=.@.F u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u y O o *.4.4.4.4.4.4.4.4.4.4.4.4.4.4.O.u u u u u e   < 4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u =   m 4.4.4.4.4.4.4.%.n  .4.4.4.4.4.4.Y u u u u 4   b 4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u r . + 3.4.4.4.4.4.4.T u 7 . < 4.4.4.4.4.3.p u u u $   ) 4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u -   b 4.4.4.4.4.4.@.i u u -   N 4.4.4.4.4.L u u u o . 3.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u +   $.4.4.4.4.4.4.D u u u y o o 1.4.4.4.4.@.u u r   : 4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u r   % 4.4.4.4.4.4.4.z u u u u $   W 4.4.4.4.4.8   J $.%.4.4.4.4.@.L D Z l u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u 5   a 4.4.4.4.4.4.,.u u u u u -   b 4.4.4.4.4.H   E 4.4.4.4.4.4.4.4.4.4.R u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u -   v 4.4.4.4.4.4.} u u u u u 7   < 4.4.4.4.4.+.  E 4.4.4.4.4.4.4.4.4.4.R u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u *   V 4.4.4.4.4.4.( u u u u u r   + 4.4.4.4.4.:.  E 4.4.4.4.4.4.4.4.4.4.R u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u $   K 4.4.4.4.4.4.R u u u u u y   O 4.4.4.4.4.2.q > ; $.4.4.4.4.#.T ~ [ F u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u #   ` 4.4.4.4.4.4.Y u u u u u y   o 4.4.4.4.4.4.i $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u O   -.4.4.4.4.4.4.U u u u u u u X   4.4.4.4.4.4.z $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u     4.4.4.4.4.4.4.P u u u u u u o   3.4.4.4.4.4.B $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u y   O 4.4.4.4.4.4.4.F u u u u u u O   ,.4.4.4.4.4.S $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u t   + 4.4.4.4.4.4.4.D u u u u u u +   *.4.4.4.4.4.F $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u y   o 4.4.4.4.4.4.4.F u u u u u u O   ,.4.4.4.4.4.D $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u X   4.4.4.4.4.4.4.I u u u u u u o   2.4.4.4.4.4.A $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u O   ,.4.4.4.4.4.4.Y u u u u u u .   4.4.4.4.4.4.B $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u +   +.4.4.4.4.4.4.T u u u u u u   . 4.4.4.4.4.4.z $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u #   ) 4.4.4.4.4.4.^ u u u u u y   o 4.4.4.4.4.4.p $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u $   J 4.4.4.4.4.4.( u u u u u y   O 4.4.4.4.4.3.u $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u *   G 4.4.4.4.4.4.o.u u u u u r   % 4.4.4.4.4.>.u $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u 5   a 4.4.4.4.4.4.,.u u u u u 6   1 4.4.4.4.4.{ u $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u y   O 4.4.4.4.4.4.4.l u u u u =   M 4.4.4.4.4.F u $    .4.4.4.4./ u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u #   _ 4.4.4.4.4.4.S u u u u #   ! 4.4.4.4.4.l u $    .4.4.4.4.} u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u 4   f 4.4.4.4.4.4.( u u u y . o 2.4.4.4.4.=.u u $   Q 4.4.4.4.:.u y w j u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u r   @ 4.4.4.4.4.4.4.B u u =   G 4.4.4.4.4.T u u -   G 4.4.4.4.4.] N  .&.u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u #   ) 4.4.4.4.4.4.&.x 4 X s 4.4.4.4.4.>.p u u 5   h 4.4.4.4.4.4.4.4.&.u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u r o + ;.4.4.4.4.4.4.2.J -.4.4.4.4.4.4.A u u u y o o 1.4.4.4.4.4.4.4.&.u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u 0   , 4.4.4.4.4.4.4.4.4.4.4.4.4.4.' u u u u u 0 . 2 2.4.4.4.4.2.o.F u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u -   v 4.4.4.4.4.4.4.4.4.4.4.4.{ p u u u u u u r 4 9 C ( T Z i u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u 4 X a ,.4.4.4.4.4.4.4.4.=.Z u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u t 3 & d | 4.4.4.4.4.,.i u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u r   % 4.4.4.4.4.4.Z u u u u u u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u +   $.4.4.4.4.4.} u u u u u u u u u u u u u u u u u u u u u u u u 4 5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u -   n 4.4.4.4.4.4.#.Y A u u u u u u u u u u u u u u u u u u u u u 5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u e   % 3.4.4.4.4.4.4.4.{ u u u u u u u u u u u u u u u u u u u u y 5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u 3   c 4.4.4.4.4.4.4.{ u u u u u u u u u u u u u u u u u u u u 7 5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u y #   W 4.4.4.4.4.4.{ u u u u u u u u u u u u u u u u u u u y 5.5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u 7 $ g H ..<.>.#.P u u u u u u u u u u u u u u u u u u u 5 5.5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y 5 5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y w 6 5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y e 7 5 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u u u u u u u y e 0 5 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.        * u u u u u u u u u u u u u u u u u u u u u u u y e 0 5 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.      * u u u u u u u u u u u u u u u u u y r 0 5 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.5.    * u u u u u u u u u u u y r 0 6 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.5.5.  * u u u u u y r q 6 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.",
+"5.5.5.5.5.5.5.5.5.= r q 6 4 5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5.5."
+};
+
+
 
 QPixmap * m_catalog_icon=NULL;
 QPixmap * m_unknown_icon=NULL;
@@ -5411,6 +5598,7 @@ QPixmap * m_borrow_icon=NULL;
 QPixmap * t_sborrow_icon=NULL;
 QPixmap * t_cborrow_icon=NULL;
 QPixmap * t_colorconfig_icon=NULL;
+QPixmap * t_qtlogo_icon=NULL;
 
 void init_icon_base ( void ) {
 
@@ -5543,6 +5731,8 @@ void init_icon_base ( void ) {
     if ( t_colorconfig_icon==NULL )
         t_colorconfig_icon=new QPixmap ( ( const char ** ) t_colorconfig_icon_data );
 
+    if ( t_qtlogo_icon==NULL )
+        t_qtlogo_icon=new QPixmap ( ( const char ** ) t_qtlogo_icon_data );
 
 }
 
@@ -5696,6 +5886,10 @@ QPixmap * get_t_cborrow_icon ( void ) {
 
 QPixmap * get_t_colorconfig_icon ( void ) {
     return t_colorconfig_icon;
+}
+
+QPixmap * get_t_qtlogo_icon ( void ) {
+    return t_qtlogo_icon;
 }
 
 
