@@ -2,6 +2,7 @@
 	- display archive contents at commwidget in better formated way
 	- commwidget space issuses fixes
 	- repaint commwidget only if nessary
+	- qtlogo on tool button and menu entry fixed
 
 03. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
 	- scanning archve files on subfolder fixed (#3484430)
